testbed/test/cruise/compiler/expected/Before.txt
Before.ump:8: error: incompatible types: String cannot be converted to int
    int a = "";
            ^
1 error